RESOLVED FIXED207537
WebSWServerConnection::registerServiceWorkerClient is not sending IPC message to UIProcess when it should
https://bugs.webkit.org/show_bug.cgi?id=207537
Summary WebSWServerConnection::registerServiceWorkerClient is not sending IPC message...
youenn fablet
Reported 2020-02-11 05:50:23 PST
WebSWServerConnection::registerServiceWorkerClient is not sending IPC message to UIProcess when it should
Attachments
Patch (4.90 KB, patch)
2020-02-11 05:53 PST, youenn fablet
no flags
Patch for landing (5.26 KB, patch)
2020-02-11 19:29 PST, youenn fablet
no flags
youenn fablet
Comment 1 2020-02-11 05:52:25 PST
youenn fablet
Comment 2 2020-02-11 05:53:12 PST
WebKit Commit Bot
Comment 3 2020-02-11 09:57:21 PST
Comment on attachment 390355 [details] Patch Clearing flags on attachment: 390355 Committed r256314: <https://trac.webkit.org/changeset/256314>
WebKit Commit Bot
Comment 4 2020-02-11 09:57:23 PST
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 5 2020-02-11 15:46:41 PST
Re-opened since this is blocked by bug 207594
youenn fablet
Comment 6 2020-02-11 17:42:30 PST
Issue with the test is that the assertion set for testing is overriden from 3 to 1 by the process throttler when didConnect is called. I will change the test to start with background and then go foreground.
youenn fablet
Comment 7 2020-02-11 19:29:57 PST
Created attachment 390482 [details] Patch for landing
WebKit Commit Bot
Comment 8 2020-02-12 07:32:19 PST
The commit-queue encountered the following flaky tests while processing attachment 390482 [details]: editing/spelling/spellcheck-attribute.html bug 206178 (authors: g.czajkowski@samsung.com, mark.lam@apple.com, and rniwa@webkit.org) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 9 2020-02-12 07:32:55 PST
Comment on attachment 390482 [details] Patch for landing Clearing flags on attachment: 390482 Committed r256432: <https://trac.webkit.org/changeset/256432>
WebKit Commit Bot
Comment 10 2020-02-12 07:32:57 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.