Cherry-pick r256432. rdar://problem/59576791

WebSWServerConnection::registerServiceWorkerClient is not sending IPC message to UIProcess when it should
    https://bugs.webkit.org/show_bug.cgi?id=207537

    Reviewed by Chris Dumez.

    Source/WebKit:

    Covered by added API test.

    * NetworkProcess/ServiceWorker/WebSWServerConnection.cpp:
    (WebKit::WebSWServerConnection::registerServiceWorkerClient):
    Fix use after move so that we can get the context connection and send the IPC message to UIProcess as expected.

    Tools:

    * TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:

    Canonical link: https://commits.webkit.org/220591@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256432 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/218903.373@safari-609.1.20.1-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609.1.20.1-branch@256979 268f45cc-cd09-0410-ab3c-d52691b4dbfc